# pdp1105-console-adapter-v2

./: .gitignore  .gitmodules  AbsoluteLoader.h  ActivityLED.cpp  ActivityLED.h  AuxPort.cpp  AuxPort.h  BootstrapDataSource.cpp  BootstrapDataSource.h  BootstrapLoader.cpp  BootstrapLoader.h  BootstrapLoaderSource.cpp  BootstrapLoaderSource.h  BuiltInFileSet.cpp  BuiltInFileSet.h  CMakeLists.txt  Config.h  ConsoleAdapter.h  FileSet.h  HostPort.cpp  HostPort.h  KeySeqMatcher.cpp  KeySeqMatcher.h  LDADataSource.cpp  LDADataSource.h  LoadDataMode.cpp  LoadFileMode.cpp  M93xxController.cpp  M93xxController.h  MemFile.h  MenuKeyMonitor.cpp  MenuKeyMonitor.h  MenuMode.cpp  PaperTapeReader.cpp  PaperTapeReader.h  README.md  SCLPort.cpp  SCLPort.h  SimpleDataSource.h  TerminalMode.cpp  (+7 more)
3D/DXF/: PDP 1105.dxf
3D/STEP/: PDP 1105 Rear Panel Mock.stp
3D/STL/: PDP 1105 Direct Attach Case Bottom.stl  PDP 1105 Direct Attach Embossed Text.stl  PDP 1105 Standalone Case Bottom.stl  PDP 1105 Standalone Case Top.stl  PDP 1105 Standalone Embossed Text.stl
case/STL/: pdp1105-console-adapter-v2-direct-attach-case-spacer.stl  pdp1105-console-adapter-v2-direct-attach-case-top.stl
design/: pdp1105-console-adapter-v2.kicad_pcb  pdp1105-console-adapter-v2.kicad_prl
docs/: pdp1105-console-adapter-user-manual.md
docs/media/: pdp1105-console-adapter-leds.odg
file-libs/: default-file-lib.uf2
filesets/: default-file-set.uf2
pcb/: pdp1105-console-adapter-v2.kicad_pcb  pdp1105-console-adapter-v2.kicad_pro  pdp1105-console-adapter-v2.kicad_sch
src/: AbsoluteLoader.cpp  AbsoluteLoader.h  ActivityLED.cpp  ActivityLED.h  AuxPort.cpp  AuxPort.h  BootstrapLoader.cpp  BootstrapLoader.h  Config.h  ConsoleAdapter.h  DiagMode.cpp  FileLib.cpp  FileLib.h  FileSet.cpp  FileSet.h  HostPort.cpp  HostPort.h  KeySeqMatcher.cpp  KeySeqMatcher.h  LDADataSource.cpp  LDADataSource.h  LoadDataMode.cpp  LoadFileMode.cpp  M93xxController.cpp  M93xxController.h  Menu.cpp  Menu.h  MenuMode.cpp  PTRProgressBar.cpp  PTRProgressBar.h  PaperTapeReader.cpp  PaperTapeReader.h  SCLPort.cpp  SCLPort.h  Settings.cpp  Settings.h  SimpleDataSource.cpp  SimpleDataSource.h  TerminalMode.cpp  UploadFileMode.cpp  (+6 more)
tools/: dumplda.py  m9312simulator.py  mkfilelib.py  mktapefileset.py
